Alesson with a mentor, arrays, functions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Js learning</title>
 </head>
 <body>
-
-    <script src="script.js"></script>
+    <script src="kek.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
