--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script src="kek.js"></script>
+    <script src="strings.js"></script>
+    <script src="myObjects.js"></script>
     <!-- <script src="script.js"></script> -->
      <h1>Lol</h1>
 </body>
